ORG-2555: Fikset opp i alle buggene, laget en test for å verifisere endringene fungerer.